@@ -51,6 +51,14 @@ typedef char * addr;
 #define CAMLprim
 #define CAMLextern extern
 
+/* Weak function definitions that can be overriden by external libs */
+/* Conservatively restricted to ELF and MacOSX platforms */
+#if defined(__GNUC__) && (defined (__ELF__) || defined(__APPLE__))
+#define CAMLweakdef __attribute__((weak))
+#else
+#define CAMLweakdef
+#endif
+
 /* Assertions */
 
 /* <private> */
