@@ -178,6 +178,8 @@ Bug fixes:
 - PR#6056: Using 'match' prevents generalization of values
 - PR#6060: ocamlbuild rules for -principal, -strict-sequence and -short-paths
 - PR#6090: Module constraint + private type seems brocken in ocaml 4.01.0
+- PR#6084: Define caml_modify and caml_initialize as weak symbols to help
+  with Netmulticore
 - PR#6109: Typos in ocamlbuild error messages
 
 Internals:
